# SnapKey

./: CMakeLists.txt  LICENSE  README.md  SnapKey.cpp  ThockTap.cpp  config.cfg  resources.rc
.github/workflows/: snapkey.yml
Build SnapKey/CMAKE-Build/: CMake-Build.bat
Build SnapKey/Setup-Build/: setup.iss
meta/: backup.thocktap
meta/profiles/: ARROW Keys.cfg  AZERTY Layout.cfg  CUSTOM Profile.cfg  ESDF Keys.cfg  WASD Keys.cfg
